--- a/index.html
+++ b/index.html
@@ -142,15 +142,15 @@
     </div>
     <div class="founder" id="founder">
         <img src="James.png">
-        <h2>ROHIT GOTHI</h2>
+        <h2>AAYUSH SHARMA</h2>
         <h4>FOUNDER</h4>
         <button type="submit">Meet the rest of the Team...</button>
         <div class="links">
             <a href="#"><i class="fa-brands fa-telegram"></i></a>
-            <a href="https://github.com/rohitggothi"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/aayuxness"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/rohitggothi/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.instagram.com/rohitggothi/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/aayushok/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/http.aayush__/"><i class="fa-brands fa-instagram"></i></a>
         </div>
     </div>
     <div class="wave">
@@ -165,10 +165,10 @@
                 <li><a href="#">Audits</a></li>
                 <li><a href="#">Brand Assets</a></li>
                 <a href="#"></a> <i class="fa-brands fa-telegram"></i>
-                <a href="https://github.com/rohitggothi"> <i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/aayuxness"> <i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://www.linkedin.com/in/rohitggothi/"><i class="fa-brands fa-linkedin"></i><a>
-                <a href="https://www.instagram.com/rohitggothi/"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/aayushok/"><i class="fa-brands fa-linkedin"></i><a>
+                <a href="https://www.instagram.com/http.aayush__/"><i class="fa-brands fa-instagram"></i></a>
 
             </ul>
             <ul class="middle">
